--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 MONGO_URI=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
 APP_NAME = share your idea
+JWT_SECRET = moaskdm03mo24!"#asd!"F$Aq3ADfq4A#3
