--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT = 5000
 MONGO_URI=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
 APP_NAME = share your idea
 JWT_SECRET = moaskdm03mo24!"#asd!"F$Aq3ADfq4A#3
+CACHE_KEY = StrongAsshite
